<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.HomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/isen_logo" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/home_welcome"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_log_out" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/lifeCycleTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/ic_life_cycle"
                android:drawablePadding="8dp"
                android:fontFamily="@font/raleway_semibold"
                android:padding="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:rotation="-4"
                android:text="@string/home_lifecycle"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/saveTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_save"
                android:drawablePadding="8dp"
                android:fontFamily="@font/raleway_semibold"
                android:padding="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:rotation="-4"
                android:text="@string/home_save"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lifeCycleTitle" />

            <TextView
                android:id="@+id/permissionTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/ic_perm_contact"
                android:drawablePadding="8dp"
                android:fontFamily="@font/raleway_semibold"
                android:padding="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:rotation="-4"
                android:text="@string/home_permission"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saveTitle" />

            <TextView
                android:id="@+id/webserviceTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_web_service"
                android:drawablePadding="8dp"
                android:fontFamily="@font/raleway_semibold"
                android:padding="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:rotation="-4"
                android:text="@string/home_webservices"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permissionTitle" />

            <TextView
                android:id="@+id/bleTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimary"
                android:drawableStart="@drawable/ic_ble"
                android:drawablePadding="8dp"
                android:fontFamily="@font/raleway_semibold"
                android:padding="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:rotation="-4"
                android:text="@string/home_ble"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/webserviceTitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>